@@ -14,6 +14,7 @@ Date: ???
     - Made heavy offshore pump ignore mining productivity research (1045)
     - Reworked milling drum recipes so that milling drums can be hand crafted (1105)
     - Added circuit connectors to all machines (1114)
+    - Increased the size of Thermal water bores. Pipes will need to be reconnected. (1113)
 ---------------------------------------------------------------------------------------------------
 Version: 0.12.7
 Date: 21.02.2024
